# berichtsheft

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  manage.py  nachweis.html  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
bapp/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  model_factory.py  settings.py  urls.py
tests/test_templatetags/: test_querystring.py
tests/test_utils/: models.py  test_date.py  test_models.py  test_perms.py
tests/test_web/: model_factory.py  models.py  test_actions.py  test_forms.py  test_models.py  test_signals.py  test_templates.py  test_views.py
web/: actions.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_nachweis_user.py  0002_userprofile.py  0003_alter_nachweis_ausbildungswoche_and_more.py  0003_soft_delete.py  0004_abteilung_user.py  0005_abteilung_optional.py  0006_user_interval.py  0007_nachweis_user_related_name.py
web/templates/: 404.html  abteilung_list.html  base.html  base_form.html  changelist.html  dashboard.html  list.html  missing.html  nachweis_edit.html  nachweis_list.html  print.html  trashcan.html
web/templates/auth/: auth_form.html  login.html  password_change_done.html
web/templates/includes/: nav.html
web/templates/widgets/: rangewidget.html
web/templatetags/: actions.py  list.py  pagination.py  querystring.py
web/utils/: date.py  decorators.py  gotenberg.py  models.py  perms.py
(+8 files in other folders)
