[project]
name = "bApp"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Philip Becker", email = "yummytea1@gmail.com"},
]
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "ruff"
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["**/migrations/**"]

[tool.lint]
select = [
    "D",        # pydocstyle
    "E", "W",   # pycodestyle
    "F",        # flake8
    "I",        # isort
]
ignore = [
    "D1",    # D1: Missing docstring error codes (because not every function and class has a docstring)
    "D203",  # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
    "D205",  # D205: 1 blank line required between summary line and description
    "D212",  # D212: Multi-line docstring summary should start at the first line
]

[tool.lint.pydocstyle]
convention = "google"

[tool.lint.pycodestyle]
max-doc-length = 88

[tool.lint.isort]
known-first-party = ["dbentry"]